Fixed CSS and spacing issues

--- a/css/custom/includes/_map.scss
+++ b/css/custom/includes/_map.scss
@@ -1,5 +1,9 @@
 #map {
+	display: block;
+	margin: 0;
+	padding: 0;
 	width: 100%;
+	max-width: 800px;
 	height: 400px;
-	border: 0;
+	border: none;
 }
